--- a/public/index.html
+++ b/public/index.html
@@ -22,67 +22,67 @@
             <td class="x">customer register</td>
             <td class="x"></td>
             <td class="x">post</td>
-            <td class="x">http://localhost:1200/api/v1/customers/register</td>
+            <td class="x">api/v1/customers/register</td>
         </tr>
         <tr>
             <td class="x">customer login</td>
             <td class="x"></td>
             <td class="x">post</td>
-            <td class="x">http://localhost:1200/api/v1/customers/login</td>
+            <td class="x">api/v1/customers/login</td>
         </tr>
         <tr>
             <td class="x">edit customer by id</td>
             <td class="x"></td>
             <td class="x">patch</td>
-            <td class="x">http://localhost:1200/api/v1/customers/editCustomer/{id}</td>
+            <td class="x">api/v1/customers/editCustomer/{id}</td>
         </tr>
         <tr>
             <td class="x">delete customer by id</td>
             <td class="x"></td>
             <td class="x">delete</td>
-            <td class="x">http://localhost:1200/api/v1/customers/deleteCustomer/{id}</td>
+            <td class="x">api/v1/customers/deleteCustomer/{id}</td>
         </tr>
         <tr>
             <td class="x">get a page of toys</td>
             <td class="x"></td>
             <td class="x">get</td>
-            <td class="x">http://localhost:1200/api/v1/toys?page={page}</td>
+            <td class="x">api/v1/toys?page={page}</td>
         </tr>
         <tr>
             <td class="x">get a page of toys by name or info</td>
             <td class="x"></td>
             <td class="x">get</td>
-            <td class="x">http://localhost:1200/api/v1/toys/search?page={page}&s={name/info}</td>
+            <td class="x">api/v1/toys/search?page={page}&s={name/info}</td>
         </tr>
         <tr>
             <td class="x">get toys by category</td>
             <td class="x"></td>
             <td class="x">get</td>
-            <td class="x">http://localhost:1200/api/v1/toys/category/{category}</td>
+            <td class="x">api/v1/toys/category/{category}</td>
         </tr>
         <tr>
             <td class="x">add toy</td>
             <td class="x">have to be logged in</td>
             <td class="x">post</td>
-            <td class="x">http://localhost:1200/api/v1/toys</td>
+            <td class="x">api/v1/toys</td>
         </tr>
         <tr>
             <td class="x">edit toy by id</td>
             <td class="x">have to be logged in</td>
             <td class="x">patch</td>
-            <td class="x">http://localhost:1200/api/v1/toys/{id}</td>
+            <td class="x">api/v1/toys/{id}</td>
         </tr>
         <tr>
             <td class="x">delete toy by id</td>
             <td class="x">have to be logged in</td>
             <td class="x">delete</td>
-            <td class="x">http://localhost:1200/api/v1/toys/{id}</td>
+            <td class="x">api/v1/toys/{id}</td>
         </tr>
         <tr>
             <td class="x">get single toy by id</td>
             <td class="x"></td>
             <td class="x">get</td>
-            <td class="x">http://localhost:1200/api/v1/toys/single/{id}}</td>
+            <td class="x">api/v1/toys/single/{id}}</td>
         </tr>
     </table>
 
